ISP20241102 - Final inspection P88相關大改

--- a/Quality/Quality/Web.Release.config
+++ b/Quality/Quality/Web.Release.config
@@ -32,5 +32,8 @@
   <appSettings>
     <add key="IsTest" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
     <add key="TestMailReceiver" value="" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+	  <add key="P88_BaseUri" value="https://adidas.pivot88.com" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+	  <add key="P88_RequestUri" value="rest/operation/v1/inspection_reports/unique_key:" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
+	  <add key="P88_ApiKey" value="e3036de4-3b66-421a-abc3-d8a37a849bb0" xdt:Transform="SetAttributes" xdt:Locator="Match(key)"/>
   </appSettings>
 </configuration>
