--- a/Quality/Quality/Web.config
+++ b/Quality/Quality/Web.config
@@ -151,6 +151,9 @@
     <add key="OnlineHelpURL" value="https://onlinehelp.sportscity.com.tw:8062/?OnLineHelpID=Quality." />
     <add key="UplodaFileRootPath" value="D:\website\Quality_Formal\UploadFile\" />
     <add key="FinalInspection_SignatureJobTitle" value="QC,Prouduction,QCManager,ProuductionManager,TSD" />
+    <add key="P88_BaseUri" value="https://adidasstage4.pivot88.com" />
+    <add key="P88_RequestUri" value="rest/operation/v1/inspection_reports/unique_key:" />
+    <add key="P88_ApiKey" value="64158338-5de2-451e-aa72-3fa470fdf4cb" />
   </appSettings>
 
 
