ISP20250289 - 調整檔案下載的檔名，為避免漏網之魚，改成只允許只允許 英文字母和 _ 兩種字元，其餘的一律以_替換

--- a/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
+++ b/Quality/BusinessLogicLayer/BusinessLogicLayer.csproj
@@ -181,6 +181,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="Helper\FileNameHelper.cs" />
     <Compile Include="Helper\SetListItem.cs" />
     <Compile Include="Helper\StringEncryptHelper.cs" />
     <Compile Include="Interface\Authority\IAuthorityService.cs" />
