--- a/Quality/Quality/Quality.csproj
+++ b/Quality/Quality/Quality.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Helper\ImageHelper.cs" />
     <Compile Include="Helper\MyJsonValueProviderFactory.cs" />
     <Compile Include="Helper\SetListItem.cs" />
+    <Compile Include="Helper\DropdownLists.cs" />
     <Compile Include="Helper\StringEncryptHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
